<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.dandy.page.WriteActivity" >
    <EditText
        android:id="@+id/write_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_title" />
    <TextView
        android:id="@+id/write_category"
        android:layout_below="@id/write_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_category"
        android:textSize="20sp"
        android:textColor="@android:color/darker_gray"/>
    <EditText
        android:id="@+id/write_content"
        android:layout_below="@id/write_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/write_content"
        android:inputType="textMultiLine"
        android:gravity="left|top"
        />

</RelativeLayout>
